# Stellara_Contracts

./: PROJECT_COMPLETE.md  SECRETS_IMPLEMENTATION_GUIDE.md  SECRETS_INDEX.md  SECRETS_MIGRATION_COMPLETE.md
.github/workflows/: contracts.yml  deploy-contracts.yml
Backend/: .env.example  .env.test  .gitignore  DELIVERABLES.md  README.md  VOICE_ENGINE_IMPLEMENTATION.md  docker-compose.yml  package-lock.json  package.json
Backend/docs/: CI_CD_SECRETS.md  IMPLEMENTATION_CHECKLIST_SECRETS.md  LOCAL_SECRETS_SETUP.md  (+6 more)
Contracts/: Cargo.toml  DEPLOYMENT.md
Contracts/contracts/academy/: GAS_PERFORMANCE.md
Contracts/contracts/academy-rewards/: Cargo.toml
Contracts/contracts/academy-rewards/src/: lib.rs  test.rs
Contracts/contracts/academy/src/: gas_bench.rs  regression.rs  test.rs  vesting.rs
Contracts/contracts/liquidity_pool/: Cargo.toml
Contracts/contracts/liquidity_pool/src/: lib.rs  test.rs
Contracts/contracts/social_rewards/src/: lib.rs  test.rs
Contracts/contracts/token/: Cargo.toml  README.md
Contracts/contracts/token/src/: admin.rs  error.rs  lib.rs  libs.rs  storage.rs
Contracts/contracts/token/test_snapshots/: approve_and_transfer_from_consumes_allowance.1.json  metadata_and_views_match.1.json  transfer_hook_failure_does_not_revert.1.json  transfer_hook_records_receiver_state.1.json  transfer_updates_balances.1.json
Contracts/contracts/token/tests/: access-control.rs  adversarial.rs  conformance.rs
Contracts/contracts/trading/src/: lib.rs  test.rs
Contracts/scripts/: deploy.sh
Contracts/shared/tests/: invariants.rs  utils.rs
(+111 files in other folders)
