[workspace]
members = [
    "contracts/trading",
    "contracts/social_rewards",
    "contracts/academy",
    "contracts/academy-rewards",
    "contracts/token",
    "shared",
]
resolver = "2"

[patch.crates-io]
derive_arbitrary = { path = "/Users/matiasaguilar/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/derive_arbitrary-1.3.2" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
