[package]
name = "token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "=20.5.0"

[dev-dependencies]
soroban-sdk = { version = "=20.5.0", features = ["testutils"] }

[features]
default = ["testutils"]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
strip = true
